--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,8 @@ h1, h2, h3, h4 {
       width: 100%;
   }
 }   
+.font-keppler-bold {
+  font-family: 'kepler-std-bold';
+  font-weight: 600;
+  letter-spacing: 2px;
+}
