--- a/src/stylesheets/Menu.css
+++ b/src/stylesheets/Menu.css
@@ -30,6 +30,10 @@ hr {
     position: relative;
     z-index: 9999;
 }
+.bg-menu-scroll {
+    background-color: #000000bd;
+    transition: all 1s;
+}
 @media only screen and (min-width: 861px) and (max-width: 1190px) {
     .nav__ul {
         display: none;
