--- a/src/stylesheets/Menu.css
+++ b/src/stylesheets/Menu.css
@@ -136,5 +136,9 @@ hr {
     }
     .icon-menu-responsive {
         display: block;
+        z-index: 9999;
+    }
+    .bg-menu-scroll {
+        background-color: transparent;
     }
 }   
